# botc-narrator

./: .gitignore  Cargo.toml  README.md  botc_narrator.opam  dune-project
src/: ability.rs  botc_narrator_lib.ml  ctx.rs  dune  engine.rs  event.rs  grimoire.rs  ids.rs  lib.rs  main.rs  registry.rs  role.rs  script.rs  setup.rs  storyteller.rs  token.rs  trouble_brewing.ml  trouble_brewing.mli  voting.rs
src/characters/: assassin.rs  baron.ml  baron.rs  butler.ml  butler.rs  character.ml  character.mli  characters.ml  chef.ml  chef.rs  drunk.ml  drunk.rs  dune  empath.ml  empath.rs  fortune_teller.ml  fortune_teller.rs  imp.ml  imp.rs  import.ml  info_role.rs  investigator.ml  investigator.rs  librarian.ml  librarian.rs  mayor.ml  mayor.rs  mod.rs  monk.ml  monk.rs  poisoner.ml  poisoner.mli  poisoner.rs  ravenkeeper.ml  ravenkeeper.rs  recluse.ml  recluse.rs  saint.ml  saint.rs  scarlet_woman.ml  (+14 more)
src/core/: alignment.mli  botc_exec.ml  botc_exec.mli  botc_exec_intf.ml  char_display.ml  char_display.mli  character.ml  character.mli  character0.ml  character0.mli  character_intf.ml  character_intf.mli  dune  game_state.ml  game_state.mli  kind.mli  narrator.ml  narrator.mli  narrator_monad.ml  narrator_monad.mli  player.ml  player.mli  player_id.ml  player_id.mli  script_intf.ml
src/interp/: auto.rs  console.rs  mod.rs  scripted.rs
src/scripts/: dune  homebrew.rs  mod.rs  trouble_brewing.ml  trouble_brewing.mli  trouble_brewing.rs
src/server/: game.rs  index.html  mod.rs  protocol.rs  spectate.html
test/: dune
test/helpers/: dune  test_helpers.ml  test_helpers.mli
test/trouble_brewing/: README.md  dune  imp_starpass.ml  (+9 more)
tests/: appendable.rs  auto_game.rs  slice.rs  trouble_brewing.rs  voting.rs
